[package]
name = "curve-sampling"
version = "0.6.0"
edition = "2024"
authors = ["Christophe Troestler <christophe.troestler@umons.ac.be>"]
description = "Adaptive sampling of parametric"
# and implicit curves
repository = "https://github.com/Chris00/rust-curve-sampling"
documentation = "https://docs.rs/curve-sampling"
license = "GPL-3.0-or-later"
keywords = ["math", "sampling", "graphing", "plotting"]
categories = ["mathematics", "science"]

exclude = [".github", "auto/",
  "src/list_id_arena.rs", "src/list_vec.rs",
  "src/fibonacci_heap.rs", "src/priority_queue.rs",
  "src/priority_queue_vec.rs",
  "examples/speed.rs"]

[dependencies]
num-complex = { version = "0.4.6", optional = true }
rgb = "0.8.32"

[features]
num-complex = ["dep:num-complex"]
